Fixed the filter text spacing and color

--- a/src/routes/Dashboard/Dashboard.css
+++ b/src/routes/Dashboard/Dashboard.css
@@ -5,7 +5,7 @@
     background-image: linear-gradient(
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0.5)
-        ), url(http://media1.s-nbcnews.com/i/MSNBC/Components/Slideshows/_production/ss-140611-brazil-world-cup-stadiums/ss-140611-brazil-world-cup-stadiums-01.jpg);
+        ), url(https://populous.com/wp-content/uploads/2012/02/LIVESTRONGSportingPark-KansasCity-InteriorSeating.jpg);
     background-repeat: no-repeat;
 }
 
@@ -22,7 +22,7 @@
 }
 
 .interactives {
-    width: 80vw;
+    width: 90vw;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -30,7 +30,10 @@
     position: relative;
 }
 
-
+.filter-label {
+    color: white;
+    padding-right: 1px;
+}
 
 .in-btn {
     background: none;
